Scaffolded Identity Login and Register pages using the custom User IdentityUser.

--- a/PizzaApp.Web/appsettings.json
+++ b/PizzaApp.Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-AspNetCoreArchTemplate.Web-43fc014e-aaab-4ffa-b5aa-28ebf02721ff;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-AspNetCoreArchTemplate.Web-43fc014e-aaab-4ffa-b5aa-28ebf02721ff;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "PizzaAppContextConnection": "Server=(localdb)\\mssqllocaldb;Database=PizzaApp.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
