--- a/PizzaApp.Web/PizzaApp.Web.csproj
+++ b/PizzaApp.Web/PizzaApp.Web.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Identity\Data\" />
+    <Folder Include="wwwroot\img\" />
   </ItemGroup>
 
 </Project>
