--- a/PizzaApp.Data/PizzaApp.Data.csproj
+++ b/PizzaApp.Data/PizzaApp.Data.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Migrations\" />
     <Folder Include="Seeding\Dtos\" />
     <Folder Include="Seeding\Input\" />
     <Folder Include="Seeding\Utilities\" />
